fix: word-break n the sidebar optimized. Do not break the ::before element.
This was brought up in #169.

--- a/otterwiki/static/css/partials/sidebar.css
+++ b/otterwiki/static/css/partials/sidebar.css
@@ -84,6 +84,18 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
     padding-left : calc(2 * var(--spacing) - var(--radius) + 0.5rem);
     color: rgba(0,0,0,.7);
     padding-top: 0.5rem;
+    word-break: break-all;
+    box-sizing: border-box;
+}
+
+.sidebarmenu li > div.summary-details {
+    box-sizing: inherit;
+    word-break: break-all;
+    list-style: none;
+}
+
+.sidebarmenu li > div.summary-details > a {
+    word-break: break-all;
 }
 
 .parent-sidebar-menu > li {
@@ -103,20 +115,20 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
 }
 
 .sidebarmenu details > summary::before {
-    width: 13px;
+    width: 1.3rem;
     display: inline-block;
     content: '▹ ';
     vertical-align: text-top;
 }
 
 .sidebarmenu details[open] > summary::before {
-    width: 13px;
+    width: 1.3rem;
     display: inline-block;
     content: '▿ ';
 }
 
 .sidebar-menu .summary-details::before {
-    width: 13px;
+    width: 1.3rem;
     display: inline-block;
     content: '□ ';
     font-size: 0.5rem;
